--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -24,7 +24,9 @@
 <!-- START PLUGINS -->
 <script type="text/javascript" src="assets/js/plugins/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/plugins/jquery/jquery-ui.min.js"></script>
-<script type="text/javascript" src="assets/js/plugins/bootstrap/bootstrap.min.js"></script>        
+<script type="text/javascript" src="assets/js/plugins/bootstrap/bootstrap.min.js"></script>  
+
+<script type="text/javascript" src="assets/js/plugins/datatables/jquery.dataTables.min.js"></script>
 <!-- END PLUGINS -->
 
 <!-- THIS PAGE PLUGINS -->
