--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -32,6 +32,7 @@
 <!-- THIS PAGE PLUGINS -->
 <script type='text/javascript' src='assets/js/plugins/icheck/icheck.min.js'></script>
 <script type="text/javascript" src="assets/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
+<script type="text/javascript" src="assets/js/plugins/tocify/jquery.tocify.min.js"></script>
 <!-- END PAGE PLUGINS --> 
 
 <!-- START TEMPLATE 
@@ -40,6 +41,11 @@
 <script type="text/javascript" src="assets/js/plugins.js"></script>        
 <script type="text/javascript" src="assets/js/actions.js"></script>        
 <!-- END TEMPLATE -->  
+<script>
+    $(function() {
+        var toc = $("#tocify").tocify({context: ".tocify-content", showEffect: "fadeIn",extendPage:false,selectors: "h2, h3, h4" });
+    });
+</script>
 <!-- END SCRIPTS -->
     </body>
 </html>
