--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -33,14 +33,72 @@
 <script type='text/javascript' src='assets/js/plugins/icheck/icheck.min.js'></script>
 <script type="text/javascript" src="assets/js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
 <script type="text/javascript" src="assets/js/plugins/tocify/jquery.tocify.min.js"></script>
+
+<script type='text/javascript' src='assets/js/plugins/bootstrap/bootstrap-datepicker.js'></script>        
+        <script type='text/javascript' src='assets/js/plugins/bootstrap/bootstrap-select.js'></script>        
+
+        <script type='text/javascript' src='assets/js/plugins/validationengine/languages/jquery.validationEngine-en.js'></script>
+        <script type='text/javascript' src='assets/js/plugins/validationengine/jquery.validationEngine.js'></script>        
+
+        <script type='text/javascript' src='assets/js/plugins/jquery-validation/jquery.validate.js'></script>                
+
+        <script type='text/javascript' src='assets/js/plugins/maskedinput/jquery.maskedinput.min.js'></script>
 <!-- END PAGE PLUGINS --> 
 
 <!-- START TEMPLATE 
 <script type="text/javascript" src="js/settings.js"></script>
 -->
+<script type="text/javascript" src="assets/js/demo_tasks.js"></script>
 <script type="text/javascript" src="assets/js/plugins.js"></script>        
 <script type="text/javascript" src="assets/js/actions.js"></script>        
 <!-- END TEMPLATE -->  
+
+<script type="text/javascript">
+    var jvalidate = $("#jvalidate").validate({
+        ignore: [],
+        rules: {                                            
+                login: {
+                        required: true,
+                        minlength: 2,
+                        maxlength: 8
+                },
+                password: {
+                        required: true,
+                        minlength: 5,
+                        maxlength: 10
+                },
+                're-password': {
+                        required: true,
+                        minlength: 5,
+                        maxlength: 10,
+                        equalTo: "#password2"
+                },
+                age: {
+                        required: true,
+                        min: 18,
+                        max: 100
+                },
+                email: {
+                        required: true,
+                        email: true
+                },
+                date: {
+                        required: true,
+                        date: true
+                },
+                credit: {
+                        required: true,
+                        creditcard: true
+                },
+                site: {
+                        required: true,
+                        url: true
+                }
+            }                                        
+        });                                    
+
+</script>
+
 <script>
     $(function() {
         var toc = $("#tocify").tocify({context: ".tocify-content", showEffect: "fadeIn",extendPage:false,selectors: "h2, h3, h4" });
