--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -15,6 +15,7 @@
         
         <!-- CSS INCLUDE -->        
         <link rel="stylesheet" type="text/css" id="theme" href="assets/css/theme-default.css"/>
+        <link rel="stylesheet" href="assets/css/print.css" type="text/css" media="print" />
         <!-- EOF CSS INCLUDE -->                                    
     </head>
 
@@ -49,9 +50,11 @@
 <script type="text/javascript" src="assets/js/plugins/bootstrap/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="assets/js/plugins/smartwizard/jquery.smartWizard-2.0.min.js"></script>
 <script type="text/javascript" src="assets/js/plugins/jquery-validation/jquery.validate.js"></script>
-<!-- START TEMPLATE 
-<script type="text/javascript" src="js/settings.js"></script>
--->
+
+
+<!-- START TEMPLATE--> 
+<script type="text/javascript" src="assets/js/xepOnline.jqPlugin.js"></script>
+<script type="text/javascript" src="assets/js/settings.js"></script>
 <script type="text/javascript" src="assets/js/demo_tasks.js"></script>
 <script type="text/javascript" src="assets/js/plugins.js"></script>        
 <script type="text/javascript" src="assets/js/actions.js"></script>        
