Revert "Ajout Profil"
This reverts commit 0d997d9e1539541b13df4db78c47426e0fc8ff86.

--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -10,7 +10,7 @@
 
         <base href="/">
         
-        <link rel="icon" href="favicon.ico" type="assets/image/x-icon" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- END META SECTION -->
         
         <!-- CSS INCLUDE -->        
