--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -45,7 +45,8 @@
         <script type='text/javascript' src='assets/js/plugins/maskedinput/jquery.maskedinput.min.js'></script>
 <!-- END PAGE PLUGINS --> 
 
-
+<script type="text/javascript" src="assets/js/plugins/rangeslider/jQAllRangeSliders-min.js"></script>
+<script type="text/javascript" src="assets/js/plugins/knob/jquery.knob.min.js"></script> 
 <script type="text/javascript" src="assets/js/plugins/bootstrap/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="assets/js/plugins/smartwizard/jquery.smartWizard-2.0.min.js"></script>
 <script type="text/javascript" src="assets/js/plugins/jquery-validation/jquery.validate.js"></script>
