--- a/ERecruteApp-front/src/index.html
+++ b/ERecruteApp-front/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="body-full-height">
 
 <head>
         <!-- META SECTION -->
@@ -21,6 +21,9 @@
 
 <body>
         <app-root></app-root>
+
+        
+      
         <!-- START SCRIPTS -->
         <!-- START PLUGINS -->
         <script type="text/javascript" src="assets/js/plugins/jquery/jquery.min.js"></script>
@@ -54,6 +57,7 @@
         <script type="text/javascript" src="assets/js/plugins/jquery-validation/jquery.validate.js"></script>
 
 
+        <script type="text/javascript" src="assets/js/plugins/bootstrap/bootstrap-select.js"></script>
         <!-- START TEMPLATE-->
         <script type="text/javascript" src="assets/js/settings.js"></script>
         <script type="text/javascript" src="assets/js/demo_tasks.js"></script>
